--- a/index.html
+++ b/index.html
@@ -111,63 +111,63 @@
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image02" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image02" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to</h2>
 			<h3>Hope</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image03" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image03" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to</h2>
 			<h3>Smile</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image04" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image04" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to</h2>
 			<h3>ask</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image05" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image05" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to</h2>
 			<h3>refuse</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image06" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image06" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to</h2>
 			<h3>give</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image07" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image07" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to</h2>
 			<h3>receive</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image08" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image08" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to </h2>
 			<h3>Love</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image09" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image09" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Dare to</h2>
 			<h3>Forgive</h3>
 		</div>
 		</li>
 		<li>
-		<img src="http://placehold.it/1400x500/222" alt="image10" class="responsiveslide">
+		<img src="./images/SiteImg/home2.png" alt="image10" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Stand up & </h2>
 			<h3>Live</h3>
